<resources>
    <string name="app_name">SistemaInfo</string>
    <string name="user_field_hint">Usuário</string>
    <string name="password_field_hint">Senha</string>
    <string name="header_contentDescription">Imagem do cabeçalho da página.</string>
    <string name="sign_in_button_text">ENTRAR</string>
    <string name="contact_us_text">Fale conosco</string>
    <string name="nav_header_title">Administrador</string>
    <string name="nav_header_subtitle">administrador@email.com</string>
    <string name="nav_header_desc">Icone</string>

    <string name="menu_costumer">Clientes</string>
    <string name="menu_register">Cadastrar</string>
    <string name="name">Nome (Obrigatório)</string>
    <string name="cpf">CPF (Somente números, obrigatório)</string>
    <string name="phone">Telefone (Somente números, opcional)</string>
    <string name="address">Endereço (Opcional)</string>
    <string name="register_button_text">Cadastrar</string>
    <string name="delete_user_content_description">Apagar usuário</string>
    <string name="cpf_length_warn">CPF deve conter 11 dígitos</string>
    <string name="name_warn">Por favor, preencha o campo "Nome".</string>
    <string name="registered_success_text">"cadastrado com sucesso, código "</string>
    <string name="phone_warn">Telefone deve ser preenchido corretamente: ddd(2 dígitos) + número(9 dígitos), ou então ficar vazio.</string>
    <string name="invalid_login_text">Combinação usuário/senha inválida.</string>
    <string name="contact_me_url">https://wa.me/+5551995346549/</string>
    <string name="code_prefix">Código:&#160;</string>
    <string name="cpf_prefix">CPF:&#160;</string>
    <string name="phone_prefix">Telefone:&#160;</string>
    <string name="address_prefix">Endereço:&#160;</string>
    <string name="name_placeholder">nome</string>
    <string name="code_placeholder">código_valor</string>
    <string name="cpf_placeholder">CPF_valor</string>
    <string name="phone_placeholder">telefone_valor</string>
    <string name="address_placeholder">Endereço_valor</string>
</resources>